@@ -69,7 +69,7 @@ import|;
 end_import
 
 begin_comment
-comment|/**  * Base class for DocIdSet to be used with DocValues. The implementation  * of its iterator is very stupid and slow if the implementation of the  * {@link #matchDoc} method is not optimized, as iterators simply increment  * the document id until {@code matchDoc(int)} returns true. Because of this  * {@code matchDoc(int)} must be as fast as possible and in no case do any  * I/O.  * @lucene.internal  */
+comment|/**  * Base class for DocIdSet to be used with DocValues. The implementation  * of its iterator is very stupid and slow if the implementation of the  * {@link #matchDoc} method is not optimized, as iterators simply increment  * the document id until {@code matchDoc(int)} returns true. Because of this  * {@code matchDoc(int)} must be as fast as possible.  * @lucene.internal  */
 end_comment
 
 begin_class
@@ -205,14 +205,14 @@ name|docid
 parameter_list|)
 block|{
 return|return
-name|matchDoc
+name|acceptDocs
+operator|.
+name|get
 argument_list|(
 name|docid
 argument_list|)
 operator|&&
-name|acceptDocs
-operator|.
-name|get
+name|matchDoc
 argument_list|(
 name|docid
 argument_list|)
@@ -454,45 +454,13 @@ name|int
 name|nextDoc
 parameter_list|()
 block|{
-do|do
-block|{
-name|doc
-operator|++
-expr_stmt|;
-if|if
-condition|(
-name|doc
-operator|>=
-name|maxDoc
-condition|)
-block|{
 return|return
-name|doc
-operator|=
-name|NO_MORE_DOCS
-return|;
-block|}
-block|}
-do|while
-condition|(
-operator|!
-operator|(
-name|matchDoc
+name|advance
 argument_list|(
 name|doc
+operator|+
+literal|1
 argument_list|)
-operator|&&
-name|acceptDocs
-operator|.
-name|get
-argument_list|(
-name|doc
-argument_list|)
-operator|)
-condition|)
-do|;
-return|return
-name|doc
 return|;
 block|}
 annotation|@
@@ -521,14 +489,14 @@ control|)
 block|{
 if|if
 condition|(
-name|matchDoc
+name|acceptDocs
+operator|.
+name|get
 argument_list|(
 name|doc
 argument_list|)
 operator|&&
-name|acceptDocs
-operator|.
-name|get
+name|matchDoc
 argument_list|(
 name|doc
 argument_list|)
